<resources>
    <!-- Facebook Strings -->
    <string name="facebook_app_id">760807138468000</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">d44055f16f8cdb8a8484aab18dcaa887</string>

    <string name="app_name">Stoneglish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_account">Create an account</string>
    <string name="i_already_have_an_account">I already have an account</string>

    <!--  Texts for welcome viewPager  -->
    <string name="text_0">Stoneglish will make your learning English easy and interesting</string>
    <string name="text_1">Stoneglish makes the impossible possible</string>
    <string name="text_2">Learn English from all over the world with Stoneglish</string>

    <string name="cd">CD</string>
    <string name="loading_string">Loading…</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="btn_text_continue">Continue</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="choose_your_level">Choose your level</string>
    <string name="beginner_a1_a2">Beginner A1-A2</string>
    <string name="intermediate_b1_b2">Intermediate B1–B2</string>
    <string name="advanced_c1_c2">Advanced C1–C2</string>
    <string name="take_an_english_test">Take an English test</string>
    <string name="why_do_you_learn_english">Why do you learn English?</string>

    <string name="home">Home</string>
    <string name="dictionary">Dictionary</string>
    <string name="cards">Cards</string>
    <string name="profile">Profile</string>
    <string name="sport">Sport</string>
    <string name="continue_string">Continue</string>
    <string name="sign_out">Sign out</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="definitions">Definitions</string>
    <string name="search">Search</string>
    <string name="there_you_can_find_a_word_which_you_want">There you can find a word which you want!</string>

    <!--  Texts for Cards functionality  -->
    <string name="modules_top_navigation_bar">Modules</string>
    <string name="cards_top_navigation_bar">Cards</string>
    <string name="cards_loading_text">Downloading chosen cards…</string>
    <string name="modules_loading_text">Downloading modules for chosen cards…</string>
    <string name="modules_list_is_empty">Add new words to cards and you will see miracles on this screen :)</string>
    <string name="test_title_string">Tests</string>

    <!--  Texts for Home functionality  -->
    <string name="home_string">Home</string>
    <string name="default_welcome_text_on_home">Welcome to a world of learning joy</string>
    <string name="filter_travelling_text">Travelling</string>
    <string name="filter_sport_text">Sport</string>
    <string name="filter_education_text">Education</string>
    <string name="filter_health_text">Health</string>
    <string name="filter_books_text">Books</string>
    <string name="cards_title_home_screen">Word of the day</string>
    <string name="topic_text_on_home_screen">Topics</string>
    <string name="start_to_learn_text">Start learning</string>
    <string name="just_text">Just text</string>
    <string name="start_journey_text">Start journey</string>
    <string name="hint_new_module_edit_text">Type new module name</string>
    <string name="dialog_choose_module_text">Choose module</string>
    <string name="card_dialog_modules_loading_text">Downloading your modules…</string>
    <string name="card_dialog_add_card_loading_text">Uploading new card…</string>
    <string name="card_dialog_success_text">Card successfully uploaded</string>
    <string name="words_of_the_day_loading_text">Downloading words of the day…</string>

    <!--  Topic screen  -->
    <string name="topic_title">Topic Title</string>
    <string name="topic_text">Topic Text</string>
    <string name="train_your_listening_and_speaking">Train your listening and speaking!</string>
    <string name="start_test">Start test</string>
    <string name="keywords">Keywords</string>
    <string name="similar_topics">Similar topics</string>
    <string name="create_module">Create module</string>
    <string name="module_name">Module name</string>
    <string name="add_word">Add word</string>
    <string name="term">Term</string>
    <string name="definition">Definition</string>
    <string name="downloading_topic_string">Downloading topic…</string>

    <!--  Texts for Add Topic functionality  -->
    <string name="add_topic_title_screen">Add Topic</string>
    <string name="topic_title_input_hint">Topic title</string>
    <string name="add_topic_title_type_and_level">Title, type and level</string>
    <string name="new_text_input_hint">Text for new topic</string>
    <string name="topic_test_and_listening_title">Topic test and listening</string>
    <string name="create_test_for_topic_button">Create test</string>
    <string name="test_from_db_for_topic_button">From DB</string>
    <string name="new_topic_test_title">Test</string>
    <string name="new_topic_listening_title">Listening and speaking</string>
    <string name="add_keyword_to_topic_button">Add keyword</string>
    <string name="new_keyword_input_hint">Keyword</string>
    <string name="new_keyword_translation_input_hint">Translation for keyword</string>
    <string name="new_keyword_to_topic_title">Keyword</string>
    <string name="new_listening_and_speaking_input_hint">Listening and speaking text</string>
    <string name="new_listening_and_speaking_definition_input_hint">Definition for listening and speaking</string>
    <string name="add_listening_to_topic_button">Add listening and speaking</string>
    <string name="new_topic_similar_topics_title">Similar topics</string>
    <string name="add_similar_topics_from_db_button">Add similar topics</string>
    <string name="add_created_topic_button">Add created topic</string>
    <string name="show_created_topic_button">Show created topic</string>
    <string name="topic_type_input_hint">Topic type</string>
    <string name="topic_image_and_text_title">Topic image and text</string>
    <string name="paste_img_url_input_hint">Img url</string>
    <string name="show_image_preview_button">Show image preview</string>
    <string name="show_text_button">Show text</string>
    <string name="edit_text_button">Edit text</string>
    <string name="similar_topic_input_hint">Similar topic name</string>
    <string name="add_topic_to_db_button">Add topic to DB</string>
    <string name="horizontal_group_title_hint_input">Horizontal group title</string>
    <string name="vertical_view_chip_text">Vertical</string>
    <string name="horizontal_view_chip_text">Horizontal</string>
    <string name="similar_topic_img_input_hint">Similar topic img</string>


    <string name="you_passed_the_test">You passed the test</string>
    <string name="english_test_from_stoneglish">English test from Stoneglish</string>
    <string name="congratulations">Congratulations</string>
    <string name="ok">OK</string>
    <string name="select_the_correct_translation">Select the correct translation</string>
    <string name="change">change</string>
    <string name="u_change">Change</string>
    <string name="account_info">Account info</string>
    <string name="info">Information</string>
    <string name="version">Version</string>
    <string name="version_info">Version 1.0</string>
    <string name="about_info">We are a young, ambitious and committed team. We met during our studies in Poznan. Our team consists of 4 people: Mykhailo Tkachenko - team leader, Vadym Muntianov - deputy team leader, Karyna Prylutska, Maksymilian Leśniczak.Our team are specialists in their field, creative graphic designers, communicative analysts and professionals who have a desire to develop.</string>
    <string name="contact">Contact</string>
    <string name="contact_info">If you have any questions, please write to this e-mail stoneglish@gmail.com</string>
    <string name="topics">Topics</string>
    <string name="favorite_topics">Favorite topics</string>
    <string name="english_level">English level</string>
    <string name="update_your_english_level">Update your English level</string>
    <string name="about_us">About us</string>
    <string name="just_type_the_word_in_the_field_above">Just type the word in the field above</string>
    <string name="example">Example</string>
    <string name="przyk_ad">Przykład</string>
    <string name="create_modules_to_learn_new_words">Create modules to learn new words</string>
    <string name="my_module">My module</string>
    <string name="enter_your_email_address_and_we_ll_send_you_a_link_to_change_your_password">Enter your email address and we\'ll send you a link to change your password</string>
    <string name="reset_password">Reset password</string>
    <string name="check_out_your_email_and_reset_yor_password">Check out your email and reset yor password</string>
</resources>