<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.core.profile.information.InformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backArrow"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="67dp"
                android:gravity="center"
                android:textSize="21sp"
                android:textStyle="bold"
                android:text="@string/info"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bot_layout_bg"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/version"
                android:textColor="@color/black"
                android:textSize="@dimen/text_main"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accountInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/alt_orange"
                android:textSize="@dimen/normal_text"
                android:text="@string/version_info"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bot_layout_bg"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="@dimen/text_main"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/alt_orange"
                android:textSize="@dimen/normal_text"
                android:text="@string/about_info"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bot_layout_bg"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="8dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="@dimen/text_main"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contactInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/alt_orange"
                android:textSize="@dimen/normal_text"
                android:text="@string/contact_info"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>