<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    tools:context=".presentation.auth.sign_in.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/signUpBackArrow"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="67dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="21sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/view_width"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:text="@string/why_do_you_learn_english"
            android:textSize="21sp"
            android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_weight="1"
                android:id="@+id/sign_up_categories"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/signUpSkipBtn"
                android:layout_width="@dimen/view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="12dp"
                android:text="@string/continue_string"
                android:textAllCaps="false" />

    </LinearLayout>


</LinearLayout>