<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.auth.sign_in.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/signUpBackArrow"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/cd" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="67dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="21sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="@dimen/view_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/main_green"
            android:hint="@string/email"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="@dimen/view_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:backgroundTint="@color/main_green"
            android:hint="@string/password"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="@dimen/view_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:text="@string/sign_up_with_email"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signUpWithGoogle"
            android:layout_width="@dimen/view_width"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp" />

<!--        <com.facebook.login.widget.LoginButton-->
<!--            android:id="@+id/signUpWithFacebook"-->
<!--            android:layout_width="@dimen/view_width"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginBottom="12dp" />-->
    </LinearLayout>

</LinearLayout>